#3645 fix chart y-axis interval and show up to 2 decimals, #2546 show all active chart metrics, show displayName instead of metric name, fix y-axis being cut off

--- a/bridge/client/app/_components/ktb-evaluation-details/ktb-evaluation-details.component.scss
+++ b/bridge/client/app/_components/ktb-evaluation-details/ktb-evaluation-details.component.scss
@@ -20,3 +20,7 @@
 .wide-input {
   min-width: 440px;
 }
+
+::ng-deep .dt-chart-pane {
+  overflow: visible !important;
+}
